kész, kis nagy segitséggel

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
             <p>Ez egy felugró ablak, ami eltűnik, ha bezárod!</p>
         </div>
         <div class="modal__footer">
-            <button class="okay__btn button">OKAY</button>
-            <button class="cancel__btn button">CANCEL</button>
+            <div class="button__container">
+            <button class="okay__btn buttonok">OKAY</button>
+            <button class="cancel__btn buttonok">CANCEL</button>
+        </div>
         </div>
     </div>
     </div>
